syntax = "proto3";

service ChatService {
  rpc sendMessage(ChatMessage) returns (Empty) {}
  rpc receiveMessage(Empty) returns (stream ChatMessage) {}
}

message ChatMessage {
  string sender = 1;
  string receiver = 2;
  string content = 3;
  int64 timestamp = 4;
}

message Empty {

}
